--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack serve",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -26,13 +27,17 @@
   },
   "homepage": "https://github.com/the-special-character/react_mobily#readme",
   "dependencies": {
-    "react": "^18.2.0"
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-addons-shallow-compare": "^15.6.3",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -42,6 +47,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "json-server": "^0.17.0",
     "prettier": "2.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
