--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.20.0",
@@ -49,8 +51,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.1",
     "prettier": "2.7.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.7",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
