--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/the-special-character/react_mobily#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-addons-shallow-compare": "^15.6.3",
