--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write .",
-    "server": "json-server --watch db.json"
+    "server": "json-server db.json -m ./node_modules/json-server-auth"
   },
   "repository": {
     "type": "git",
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
     "prettier": "2.7.1",
