--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write .",
-    "server": "json-server db.json -m ./node_modules/json-server-auth"
+    "server": "json-server db.json -m ./node_modules/json-server-auth",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.20.0",
@@ -60,6 +62,8 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "postcss": "^8.4.14",
